# pomatez

./: CHANGELOG.md  package.json
.github/workflows/: build-tauri.yml  build.yml  release-please.yml
app/electron/: package.json
app/electron/electron-builder/: afterSign.js
app/electron/src/: main.ts
app/electron/src/helpers/: contextMenu.ts
app/renderer/: package.json
app/tauri/: Cargo.toml  release.conf.json  tauri.conf.json
app/tauri/capabilities/: default.json
app/tauri/release-prep/: release-prep.js
app/tauri/src/: commands.rs  global_shortcuts.rs  lib.rs  main.rs  system_tray.rs  updater.rs
