[package]
name = "pomatez"
# In the current version of release please, unless the toml file is in the root of the project it cannot be updated.
# https://github.com/googleapis/release-please/issues/1724
# util/cargo-version-updater.js will run to keep this value up to date before rust builds.
version = "1.10.0"
description = "Attractive pomodoro timer for Windows, Mac, and Linux."
authors = ["Roldan Montilla Jr"]
license = "MIT"
repository = "https://github.com/zidoro/pomatez"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The `_lib` suffix avoids a name conflict with the bin target on Windows.
# https://github.com/rust-lang/cargo/issues/8519
name = "pomatez_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
url = "2"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-autostart = "2"
lazy_static = "1"
base64 = "0.22"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"

# Desktop-only plugins.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devUrl` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `frontendDist` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
